Fixed spacing between columns and images for css-two-column-layout exercise.

--- a/css-two-column-layout/styles.css
+++ b/css-two-column-layout/styles.css
@@ -1,5 +1,5 @@
 .container {
-  max-width: 800px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
@@ -9,6 +9,7 @@
 
 .column-full {
   flex-basis: 100%;
+  margin: 0 0 50px auto;
 }
 
 body {
@@ -43,15 +44,14 @@ p {
 
 button {
   font-weight: bold;
-  font-size: noraml;
   color: red;
   border-color: red;
   background-color: white;
   display: flex;
   justify-content: center;
   text-transform: uppercase;
-  width: 9rem;
-  padding: 0.5rem;
+  width: 200px;
+  padding: 15px;
   border-style: solid;
 }
 
@@ -62,5 +62,29 @@ button:hover {
 }
 
 .column-third {
+  margin: 0 0 25px 10px;
+  padding: 1px;
+}
+
+.column-bottom {
   margin: 0 auto;
+}
+
+.space {
+  padding: 10rem;
+}
+
+.practice,
+.data {
+  padding-left: 50px;
+}
+
+h3,
+p {
+  padding: 2px 26px 5px 9px;
+  margin: 48px 36px 0 4px;
+}
+
+p {
+  margin-top: 1px;
 }
